--- a/roles/ruby/tasks/ubuntu.yml
+++ b/roles/ruby/tasks/ubuntu.yml
@@ -2,6 +2,7 @@
 - name: Update cache
   apt:
     update_cache: yes
+  become: yes
 
 - name: Install dependencies
   apt:
@@ -9,6 +10,7 @@
     state: present
     autoclean: yes
     autoremove: yes
+  become: yes
   with_items:
     - build-essential
     - curl
