--- a/roles/clojure/tasks/main.yml
+++ b/roles/clojure/tasks/main.yml
@@ -14,6 +14,7 @@
     recurse: yes
 
 - name: Create symlink
-  copy:
-    src: deps.edn
-    dest: "{{ ansible_user_dir }}/.config/clojure/deps.edn"
+  file:
+    src: "{{ ansible_env.PWD }}/config/clojure"
+    dest: "{{ ansible_user_dir }}/.config/clojure"
+    state: link
