--- a/roles/python/tasks/ubuntu.yml
+++ b/roles/python/tasks/ubuntu.yml
@@ -14,5 +14,7 @@
   with_items:
     - python-dev
     - python-pip
+    - python-setuptools
     - python3-dev
     - python3-pip
+    - python3-setuptools
