--- a/roles/clojure/tasks/main.yml
+++ b/roles/clojure/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: Create config dir
   file:
-    path: "{{ ansible_user_dir }}/.config/clojure"
+    path: "{{ ansible_user_dir }}/.config"
     state: directory
     recurse: yes
 
