--- a/roles/go/tasks/ubuntu.yml
+++ b/roles/go/tasks/ubuntu.yml
@@ -1,35 +1,6 @@
 ---
-- name: Update cache
-  apt:
-    update_cache: yes
+- name: Install Golang
+  snap:
+    name: go
+    classic: yes
   become: yes
-
-- name: Install software-properties-common
-  apt:
-    name: software-properties-common
-    state: present
-    autoclean: yes
-    autoremove: yes
-  become: yes
-
-- name: Add repository
-  apt_repository:
-    repo: ppa:gophers/archive
-  become: yes
-
-- name: Install Go
-  apt:
-    name: golang-{{ go_version }}-go
-    state: present
-    autoclean: yes
-    autoremove: yes
-  become: yes
-
-- name: Create Symlink
-  file:
-    src: /usr/lib/go-{{ go_version }}/bin/{{ item }}
-    dest: /usr/local/bin/{{ item }}
-    state: link
-  with_items:
-    - go
-    - gofmt
