--- a/roles/go/vars/main.yml
+++ b/roles/go/vars/main.yml
@@ -3,18 +3,13 @@ go_version: 1.9
 gopath: "{{ ansible_user_dir }}/Development"
 
 go_packages:
-  - name: gocode
-    uri: github.com/stamblerre/gocode
-  - name: gb
-    uri: github.com/constabulary/gb/...
   - name: direnv
     uri: github.com/direnv/direnv
-  - name: gometalinter
-    uri: github.com/alecthomas/gometalinter
-    command: gometalinter --install --update
   - name: gore
     uri: github.com/motemen/gore
   - name: pp
     uri: github.com/k0kubun/pp
+  - name: gocode
+    uri: github.com/mdempsky/gocode
   - name: golsp
     uri: golang.org/x/tools/cmd/golsp
