--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,3 +81,16 @@ jobs:
         run: ./setup_test.sh
       - name: Run Serverspec
         run: rake spec:vscode
+  node:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, macOS-10.14]
+    steps:
+      - uses: actions/checkout@v1
+      - name: Provisioning
+        run: ./setup.sh node
+      - name: Install serverspec
+        run: ./setup_test.sh
+      - name: Run Serverspec
+        run: rake spec:node
