--- a/roles/vscode/vars/main.yml
+++ b/roles/vscode/vars/main.yml
@@ -3,21 +3,31 @@ vscode_extensions:
   - 2gua.rainbow-brackets
   - alefragnani.project-manager
   - apollographql.vscode-apollo
-  - bungcip.better-toml
+  - auchenberg.vscode-browser-preview
+  - BazelBuild.vscode-bazel
+  - castwide.solargraph
+  - dbaeumer.vscode-eslint
   - eamodio.gitlens
   - esbenp.prettier-vscode
   - gerane.Theme-Solarized-dark
-  - miclo.sort-typescript-imports
+  - GitHub.vscode-pull-request-github
+  - googlecloudtools.cloudcode
+  - jnbt.vscode-rufo
+  - keyring.Lua
+  - mauve.terraform
+  - misogi.ruby-rubocop
+  - ms-azuretools.vscode-docker
   - MS-CEINTL.vscode-language-pack-ja
   - ms-kubernetes-tools.vscode-kubernetes-tools
   - ms-python.python
+  - ms-vscode-remote.remote-ssh
+  - ms-vscode-remote.remote-ssh-edit
+  - ms-vscode-remote.remote-ssh-explorer
   - ms-vscode.Go
   - ms-vsliveshare.vsliveshare
-  - octref.vetur
-  - PeterJausovec.vscode-docker
   - PKief.material-icon-theme
   - rebornix.ruby
   - redhat.vscode-yaml
-  - Shan.code-settings-sync
+  - VisualStudioExptTeam.vscodeintellicode
   - vscodevim.vim
   - zxh404.vscode-proto3
