--- a/roles/fish/tasks/ubuntu.yml
+++ b/roles/fish/tasks/ubuntu.yml
@@ -1,15 +1,12 @@
 ---
-- name: Update cache
-  apt:
-    update_cache: yes
-
 - name: Add repository
   apt_repository:
     repo: ppa:fish-shell/release-2
 
-- name: Install fish shell
+- name: Install fish for Ubuntu
   apt:
     name: fish
     state: present
     autoclean: yes
     autoremove: yes
+    update_cache: yes
