Update clojure role

--- a/roles/clojure/tasks/main.yml
+++ b/roles/clojure/tasks/main.yml
@@ -7,6 +7,10 @@
   import_tasks: ubuntu.yml
   when: ansible_os_family == "Debian"
 
+- name: for Arch Linux
+  import_tasks: arch.yml
+  when: ansible_os_family == "Archlinux"
+
 - name: Create config dir
   file:
     path: "{{ ansible_user_dir }}/.config"
