--- a/roles/python/tasks/darwin.yml
+++ b/roles/python/tasks/darwin.yml
@@ -5,8 +5,7 @@
 
 - name: Install Python
   homebrew:
-    name: "{{ item }}"
+    name:
+      - python
+      - python3
     state: present
-  with_items:
-    - python
-    - python3
