--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -5,16 +5,5 @@
 - import_tasks: darwin.yml
   when: ansible_os_family == "Darwin"
 
-- name: Install Python2 package
-  pip:
-    name: "{{ item.name | default(item) }}"
-    state: "{{ item.state | default('latest') }}"
-  with_items: "{{ python2_packages }}"
-
-- name: Install Python3 package
-  pip:
-    name: "{{ item.name | default(item) }}"
-    state: "{{ item.state | default('latest') }}"
-    extra_args: "{{ item.extra_args | default('') }}"
-    executable: pip3
-  with_items: "{{ python3_packages }}"
+- import_tasks: arch.yml
+  when: ansible_os_family == "Archlinux"
