--- a/roles/python/tasks/ubuntu.yml
+++ b/roles/python/tasks/ubuntu.yml
@@ -6,15 +6,14 @@
 
 - name: Install Python
   apt:
-    name: "{{ item }}"
+    name:
+      - python-dev
+      - python-pip
+      - python-setuptools
+      - python3-dev
+      - python3-pip
+      - python3-setuptools
     state: present
     autoclean: yes
     autoremove: yes
   become: yes
-  with_items:
-    - python-dev
-    - python-pip
-    - python-setuptools
-    - python3-dev
-    - python3-pip
-    - python3-setuptools
