--- a/config/Code/User/projects.json
+++ b/config/Code/User/projects.json
@@ -12,6 +12,12 @@
     "group": ""
   },
   {
+    "name": "narv-server",
+    "rootPath": "/home/sakuraba/dev/src/github.com/raba-jp/narv-server",
+    "paths": [],
+    "group": ""
+  },
+  {
     "name": "rskmod",
     "rootPath": "/home/sakuraba/dev/src/github.com/raba-jp/rskmod",
     "paths": [],
@@ -20,12 +26,6 @@
   {
     "name": "microservices_template",
     "rootPath": "/home/sakuraba/dev/src/github.com/raba-jp/microservices_template",
-    "paths": [],
-    "group": ""
-  },
-  {
-    "name": "mitsuri-2",
-    "rootPath": "/home/sakuraba/dev/src/github.com/catallaxy-dev/mitsuri-2",
     "paths": [],
     "group": ""
   }
