--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -41,7 +41,7 @@ colors:
     cyan:    '0x93a1a1'
     white:   '0xfdf6e3'
 
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
