--- a/Makefile.toml
+++ b/Makefile.toml
@@ -30,6 +30,12 @@ nix-build https://github.com/LnL7/nix-darwin/archive/master.tar.gz -A installer
 nix-env -iA nixpkgs.nixUnstable
 '''
 
+[tasks.install.mac]
+script = '''
+#!/usr/bin/env bash
+curl -L https://nixos.org/nix/install | sh -s -- --darwin-use-unencrypted-nix-store-volume --daemon
+'''
+
 [tasks.generate.linux]
 script = '''
 #!/usr/bin/env bash
