--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,13 +1,8 @@
 [config]
 skip_core_tasks = true
 
-[tasks.format]
-script = '''
-#!/usr/bin/env bash
-fd --extension nix . | xargs nixfmt
-fd --extension sh . | xargs shfmt -w
-fd --extension lua . | xargs lua-format -i
-'''
+[tasks.fmt]
+command = 'treefmt'
 
 [tasks.build.linux]
 script = '''
