--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,8 +15,8 @@ jobs:
           github-access-token: ${{ secrets.GITHUB_TOKEN }}
           cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - run: nix build -L '.#nixosConfigurations.define7.config.system.build.toplevel'
-      # - name: Activate
-      #   if: ${{ github.ref == 'refs/heads/main' }}
-      #   run: cachix deploy activate
-      #   env:
-      #     CACHIX_ACTIVATE_TOKEN: ${{ secrets.CACHIX_ACTIVATE_TOKEN }}
+      - name: Activate
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: cachix deploy activate $(nix-build deploy.nix)
+        env:
+          CACHIX_ACTIVATE_TOKEN: ${{ secrets.CACHIX_ACTIVATE_TOKEN }}
