--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -20,3 +20,8 @@ runs:
       with:
         name: raba-jp
         authToken: ${{ inputs.cachix-auth-token }}
+        installCommand: |
+          nix-env \
+          -if https://github.com/cachix/cachix/tarball/master \
+          --substituters 'https://cache.nixos.org https://cachix.cachix.org' \
+          --trusted-public-keys 'cachix.cachix.org-1:eWNHQldwUO7G2VkjpnjDbWwy4KQ/HNxht7H4SSoMckM= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY='
