--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,7 @@ jobs:
   activate:
     name: Activate deployment
     runs-on: ubuntu-20.04
+    needs: builds
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
