--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -12,6 +12,7 @@ runs:
     - name: "Install nix"
       uses: cachix/install-nix-action@v16
       with:
+        nix_path: nixpkgs=channel:nixos-unstable
         extra_nix_config: |
           experimental-features = nix-command flakes
           access-tokens = github.com=${{ inputs.github-access-token }}
