--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,19 +18,27 @@ jobs:
         with:
           github-access-token: ${{ secrets.GITHUB_TOKEN }}
           cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - run: nix-shell -p nix-build-uncached --run 'nix-build-uncached deploy.nix'
+      - run: nix build -f deploy.nix -o deploy-spec.json
+      - uses: actions/upload-artifact@v2
+        with:
+          name: deploy-spec
+          path: |
+            deploy-spec.json
   activate:
     name: Activate deployment
     runs-on: ubuntu-20.04
     needs: builds
     steps:
-      - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
         with:
           github-access-token: ${{ secrets.GITHUB_TOKEN }}
           cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - uses: actions/download-artifact@v2
+        with:
+          name: deploy-spec
+          path: deploy-spec.json
       - name: Activate
         if: ${{ github.ref == 'refs/heads/main' }}
-        run: cachix deploy activate $(nix-build deploy.nix)
+        run: cachix deploy activate deploy-spec.json
         env:
           CACHIX_ACTIVATE_TOKEN: ${{ secrets.CACHIX_ACTIVATE_TOKEN }}
