--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -2,6 +2,7 @@ name: Update dependencies
 on:
   schedule:
     - cron:  '0 9 * * *'
+  workflow_dispatch:
 jobs:
   builds:
     name: Update dependencies
