--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -22,3 +22,5 @@ runs:
       with:
         name: raba-jp
         authToken: ${{ inputs.cachix-auth-token }}
+    - run: nix-env -iA nixpkgs.nix-build-uncached
+      shell: bash
