--- a/.github/workflows/nixos-deploy.yaml
+++ b/.github/workflows/nixos-deploy.yaml
@@ -20,6 +20,9 @@ jobs:
         with:
           github-access-token: ${{ secrets.GITHUB_TOKEN }}
           cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - uses: nixbuild/nixbuild-action@v8
+        with:
+          nixbuild_ssh_key: ${{ secrets.NIXBUILD_SSH_KEY }}
       - run: nix build -L
       - uses: actions/upload-artifact@v2
         with:
