--- a/.github/workflows/nixos-deploy.yaml
+++ b/.github/workflows/nixos-deploy.yaml
@@ -22,7 +22,7 @@ jobs:
           cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - uses: nixbuild/nixbuild-action@v8
         with:
-          nixbuild_ssh_key: ${{ secrets.NIXBUILD_SSH_KEY }}
+          nixbuild_ssh_key: ${{ secrets.NIX_BUILD_SSH_KEY }}
       - run: nix build -L
       - uses: actions/upload-artifact@v2
         with:
