--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -23,3 +23,18 @@ jobs:
       - run: |
           nix build --no-link '.#homeConfigurations.runner.activationPackage'
           "$(nix path-info '.#homeConfigurations.runner.activationPackage')"/activate
+      - name: Run benchmark
+        run: nix run .#machinectl -- benchmark > result.json
+      - name: Dump outputs
+        run: cat result.json
+      - name: Upload benchmark
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          tool: customSmallerIsBetter
+          output-file-path: result.json
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          auto-push: true
+          comment-on-alert: true
+          fail-on-alert: true
+          alert-threshold: '150%'
+          alert-comment-cc-users: '@raba-jp'
