--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -23,6 +23,7 @@ jobs:
       - run: |
           nix build --no-link '.#homeConfigurations.runner.activationPackage'
           "$(nix path-info '.#homeConfigurations.runner.activationPackage')"/activate
+      - run: go install github.com/rhysd/vim-startuptime@latest
       - name: Run benchmark
         run: nix run .#machinectl -- benchmark > result.json
       - name: Dump outputs
