--- a/treefmt.toml
+++ b/treefmt.toml
@@ -4,6 +4,12 @@ options = ["-e"]
 includes = [ "*.nix" ]
 excludes = []
 
+[formatter.statix]
+command = "statix"
+options = ["fix"]
+includes = [ "*.nix" ]
+excludes = []
+
 [formatter.nix]
 command = "alejandra"
 options = []
