--- a/.github/workflows/activate.yaml
+++ b/.github/workflows/activate.yaml
@@ -17,6 +17,7 @@ jobs:
   activate:
     name: Activate deployment
     runs-on: ubuntu-22.04
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v2
       - uses: cachix/install-nix-action@v16
