--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
           name: raba-jp
           extraPullNames: helix
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - run: nix build -L
+      - run: nix build -L .#deploySpec
       - uses: actions/upload-artifact@v2
         with:
           name: result
