--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -21,6 +21,12 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v18
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+          extra_nix_config: |
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - run: nix-env -iA nixpkgs.nix-prefetch
       - uses: actions/setup-go@v3
       - run: go run scripts/brave-updater/main.go
       - name: Create PR
