--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -26,7 +26,7 @@ jobs:
           nix_path: nixpkgs=channel:nixos-unstable
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      - run: nix-env -iA nixpkgs.nix-prefetch
+      - run: nix-env -i nix-prefetch -f '<nixpkgs>'
       - uses: actions/setup-go@v3
       - run: go run scripts/brave-updater/main.go
       - name: Create PR
