--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,20 +14,20 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: cachix/install-nix-action@v18
+      - uses: nixbuild/nix-quick-install-action@v21
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          extra_nix_config: |
+          # nix_on_tmpfs: true
+          nix_conf: |
             experimental-features = nix-command flakes
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      - uses: cachix/cachix-action@v12
+            system-features = kvm
+      - uses: nixbuild/nixbuild-action@v15
         with:
-          name: raba-jp
-          extraPullNames: helix
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - run: nix build -L .#deploySpec
-      - uses: actions/upload-artifact@v3
-        with:
-          name: result
-          path: |
-            result
+          nixbuild_ssh_key: ${{ secrets.NIXBUILD_NET_SSH_KEY }}
+      - run: |
+          nix build -L \
+            --print-build-logs \
+            --eval-store auto \
+            --store ssh-ng://eu.nixbuild.net \
+            --builders "" --max-jobs 2 \
+            .#deploySpec
