--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: nixbuild/nix-quick-install-action@v21
         with:
-          # nix_on_tmpfs: true
+          nix_on_tmpfs: true
           nix_conf: |
             experimental-features = nix-command flakes
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
@@ -24,10 +24,23 @@ jobs:
       - uses: nixbuild/nixbuild-action@v15
         with:
           nixbuild_ssh_key: ${{ secrets.NIXBUILD_NET_SSH_KEY }}
-      - run: |
-          nix build -L \
+      - name: Build
+        run: |
+          touch build.json
+          nix build \
             --print-build-logs \
             --eval-store auto \
             --store ssh-ng://eu.nixbuild.net \
-            --builders "" --max-jobs 2 \
-            .#deploySpec
+            --builders '' --max-jobs 2 \
+            .#deploySpec \
+            --json > build.json \
+            2> >(tee -a build.log >&2) || true
+          
+          OUTPUT="$(jq '.[].outputs.out' --raw-output build.json | tr -d '\n')"
+          nix copy --from eu.nixbuild.net "$OUTPUT"
+          cp "$OUTPUT" ./spec.json
+      - uses: actions/upload-artifact@v3
+        with:
+          name: result
+          path: |
+            spec.json
