--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
             --json > build.json \
             2> >(tee -a build.log >&2) || true
           
-          OUTPUT="$(jq '.[].outputs.out' --raw-output build.json | tr -d '\n')"
+          OUTPUT="$(jq '.[0].outputs.out' --raw-output build.json | tr -d '\n')"
           nix copy --from ssh-ng://eu.nixbuild.net "$OUTPUT"
           cp "$OUTPUT" ./spec.json
       - uses: actions/upload-artifact@v3
