--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,13 +28,11 @@ jobs:
         run: |
           touch build.json
           nix build \
-            --print-build-logs \
             --eval-store auto \
             --store ssh-ng://eu.nixbuild.net \
             --builders '' --max-jobs 2 \
             .#deploySpec \
-            --json > build.json \
-            2> >(tee -a build.log >&2) || true
+            --json > build.json
           
           OUTPUT="$(jq '.[0].outputs.out' --raw-output build.json | tr -d '\n')"
           nix copy --from ssh-ng://eu.nixbuild.net "$OUTPUT"
