--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,12 +31,11 @@ jobs:
             --eval-store auto \
             --store ssh-ng://eu.nixbuild.net \
             --builders '' --max-jobs 2 \
-            .#deploySpec \
+            .#nixosConfigurations.define7.config.system.build.toplevel \
             --json > build.json
-      - run: |          
-          OUTPUT="$(jq '.[0].outputs.out' --raw-output build.json | tr -d '\n')"
-          nix copy --from ssh-ng://eu.nixbuild.net "$OUTPUT"
-          cp "$OUTPUT" ./spec.json
+      - name: Create deploy spec file
+        run: |
+          jq '.[0].outputs.out | { agents: define7: .}' build.json > spec.json
       - uses: actions/upload-artifact@v3
         with:
           name: result
